<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.PlayAnimationActivity"
    android:background="@drawable/b">

    <ProgressBar
        android:id="@+id/energy_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/energy_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/energy_textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/energy_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/RemainingEnergy"
        android:textColor="@color/blue2"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <edu.wm.cs.cs301.wenxindang.generation.MazePanel
        android:id="@+id/MazePanelAnimation"
        android:layout_width="380dp"
        android:layout_height="380dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655"
        tools:srcCompat="@tools:sample/avatars" />

    <ToggleButton
        android:id="@+id/ShowMap_toggleButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textOff="@string/hide_map"
        android:textOn="@string/show_map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/energy_textView" />

    <ToggleButton
        android:id="@+id/ShowSolution_toggleButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:textOff="@string/hide_solution"
        android:textOn="@string/show_solution"
        app:layout_constraintBottom_toBottomOf="@+id/ShowMap_toggleButton"
        app:layout_constraintEnd_toStartOf="@+id/HideWall_toggleButton"
        app:layout_constraintStart_toEndOf="@+id/ShowMap_toggleButton"
        app:layout_constraintTop_toTopOf="@+id/ShowMap_toggleButton" />

    <ToggleButton
        android:id="@+id/HideWall_toggleButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:textOff="@string/hide_walls"
        android:textOn="@string/show_walls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ShowMap_toggleButton" />

    <ToggleButton
        android:id="@+id/pause_toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="30dp"
        android:textOff="@string/pause"
        android:textOn="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.383" />

<!--    <Button
        android:id="@+id/shortcut_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:text="@string/Success"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/shortcut_failure"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.554" />

    <Button
        android:id="@+id/shortcut_failure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/Failure"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/shortcut_success" />-->

    <TextView
        android:id="@+id/remainingEnergy_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/RemainingEnergynum"
        android:textColor="@color/blue2"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/energy_progressBar"
        app:layout_constraintEnd_toEndOf="@+id/energy_progressBar"
        app:layout_constraintStart_toStartOf="@+id/energy_progressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>