<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b"
    tools:context=".gui.PlayManuallyActivity">

    <!--    <ProgressBar
        android:id="@+id/energy_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/energy_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/energy_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/RemainingEnergy"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <edu.wm.cs.cs301.wenxindang.generation.MazePanel
        android:id="@+id/MazePanel"
        android:layout_width="380dp"
        android:layout_height="380dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338"
        tools:srcCompat="@tools:sample/avatars" />

    <ToggleButton
        android:id="@+id/ShowMap_toggleButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="22dp"
        android:textOff="@string/show_map"
        android:textOn="@string/hide_map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/ShowSolution_toggleButton"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:textOff="@string/show_solution"
        android:textOn="@string/hide_solution"
        app:layout_constraintBottom_toBottomOf="@+id/ShowMap_toggleButton"
        app:layout_constraintEnd_toStartOf="@+id/HideWall_toggleButton"
        app:layout_constraintStart_toEndOf="@+id/ShowMap_toggleButton"
        app:layout_constraintTop_toTopOf="@+id/ShowMap_toggleButton" />

    <ToggleButton
        android:id="@+id/HideWall_toggleButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:textOff="@string/show_walls"
        android:textOn="@string/hide_walls"
        app:layout_constraintBottom_toBottomOf="@+id/ShowMap_toggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ShowMap_toggleButton" />


    <!--    <Button
        android:id="@+id/shortcut_failure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Failure"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/shortcut_success" />-->

    <!--    <Button
        android:id="@+id/shortcut_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Success"
        app:layout_constraintBottom_toBottomOf="@+id/MazePanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/MazePanel"
        app:layout_constraintVertical_bias="0.521" />-->

    <Button
        android:id="@+id/UP_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:text="@string/up"
        app:layout_constraintEnd_toEndOf="@+id/JUMPButton"
        app:layout_constraintStart_toStartOf="@+id/JUMPButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/DOWN_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/down"
        app:layout_constraintEnd_toEndOf="@+id/UP_button"
        app:layout_constraintStart_toStartOf="@+id/UP_button"
        app:layout_constraintTop_toBottomOf="@+id/UP_button" />

    <Button
        android:id="@+id/RIGHT_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/right"
        app:layout_constraintBottom_toBottomOf="@+id/LEFT_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/LEFT_button" />

    <Button
        android:id="@+id/LEFT_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/left"
        app:layout_constraintBottom_toTopOf="@+id/DOWN_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UP_button" />

    <Button
        android:id="@+id/JUMPButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/JUMP"
        app:layout_constraintBottom_toBottomOf="@+id/LEFT_button"
        app:layout_constraintEnd_toStartOf="@+id/RIGHT_button"
        app:layout_constraintStart_toEndOf="@+id/LEFT_button"
        app:layout_constraintTop_toTopOf="@+id/LEFT_button" />

    <!--    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="@+id/DOWN_button"
        app:layout_constraintEnd_toEndOf="@+id/RIGHT_button"
        app:layout_constraintStart_toStartOf="@+id/RIGHT_button"
        app:layout_constraintTop_toTopOf="@+id/DOWN_button" />-->

</androidx.constraintlayout.widget.ConstraintLayout>