<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b8"
    tools:context=".gui.GeneratingActivity">
    <!--android:background="@drawable/background">-->

    <TextView
        android:id="@+id/generatingMaze_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/generating_maze"
        android:textColor="@color/yellowWM"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/generating_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/generatingMaze_textView"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_textView" />

    <TextView
        android:id="@+id/progress_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/generating_progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/progress"
        android:textColor="@color/yellowWM"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generatingMaze_textView" />

    <TextView
        android:id="@+id/percent_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:text="@string/percent"
        android:textColor="@color/yellowWM"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/progress_textView"
        app:layout_constraintStart_toEndOf="@+id/progress_textView"
        app:layout_constraintTop_toTopOf="@+id/progress_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>